<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/regActivity_panel_upper"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/regActivity_button_Back"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:shadowColor="#777"
            app:iconTint="@color/purple_500"
            app:icon="@drawable/arrowback"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:iconSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/text_regActivity_big"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/regActivity_text_big"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/regActivity_button_Back"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/regActivity_panel_upper">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <!--    <ScrollView-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="parent">-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regActivity_textInput_login"
            style="@style/myTextInputLayout"

            android:layout_marginTop="15dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/regActivity_hint_login"
                android:maxLines="1"
                android:textColorHint="#330000"
                android:shadowColor="@color/purple_500"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regActivity_textInput_password"
            style="@style/myTextInputLayout"

            android:layout_marginTop="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regActivity_textInput_nickname"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/regActivity_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regActivity_textInput_repeatPassword"
            style="@style/myTextInputLayout"
            android:layout_marginTop="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regActivity_textInput_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/regActivity_hint_repeatPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regActivity_textInput_nickname"
            style="@style/myTextInputLayout"
            android:layout_marginTop="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regActivity_textInput_login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/regActivity_hint_nickname"
                android:maxLines="1"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

    <!--    <AutoCompleteTextView-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="47dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/regActivity_textInput_nickname"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:layout_marginStart="17dp"-->
    <!--        android:layout_marginEnd="17dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        -->
    <!--        />-->
    <!--    <Spinner-->
    <!--        android:id="@+id/regActivity_Spinner_sex"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="48dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/regActivity_textInput_nickname"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:layout_marginStart="17dp"-->
    <!--        android:layout_marginEnd="17dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:spinnerMode="dropdown"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

    <!--    </Spinner>-->


        <!--    </ScrollView>-->
        <TextView
            android:id="@+id/regActivity_text_Sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/regActivity_text_sex"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regActivity_textInput_repeatPassword"/>
        <RadioGroup
            android:layout_marginTop="10dp"
            android:id="@+id/regActivity_sex_radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"

            app:layout_constraintTop_toBottomOf="@id/regActivity_text_Sex">

            <RadioButton
                android:id="@+id/regActivity_radioButton_male"
                style="@style/radioButtons"
                android:text="@string/regActivity_radioButton_male"/>

            <RadioButton
                android:id="@+id/regActivity_radioButton_female"
                style="@style/radioButtons"
                android:text="@string/regActivity_radioButton_female"/>
            <RadioButton
                android:id="@+id/regActivity_radioButton_humandroid"
                style="@style/radioButtons"
                android:text="@string/regActivity_radioButton_humandroid"/>
        </RadioGroup>
        <com.google.android.material.button.MaterialButton
            style="@style/FilledButton"
            android:id="@+id/regActivity_Button_Registrate"
            android:layout_marginTop="30dp"
            android:text="@string/welcomeActivity_Btn_openRegActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regActivity_sex_radioGroup"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/regActivity_text_acceptReg"
            app:layout_constraintTop_toBottomOf="@id/regActivity_Button_Registrate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:textSize="12sp"
            android:layout_marginEnd="16dp"
            android:maxLines="3"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>