<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loginActivity_panel_upper"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:navigationIcon="@drawable/ic_arrowback"
        app:title="@string/loginActivity_text_big"
        app:titleTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        />
    <ImageView
        android:id="@+id/loginActivity_imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/loginActivity_panel_upper"
        app:srcCompat="@drawable/cyclists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginActivity_textInput_login"
        style="@style/myTextInputLayout"
        android:layout_marginTop="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginActivity_imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regActivity_hint_login"
            android:maxLines="1"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginActivity_textInput_password"
        style="@style/myTextInputLayout"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginActivity_textInput_login"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regActivity_hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:backgroundTint="@color/purple_200"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginActivity_Button_Login"
        android:layout_marginTop="30dp"

        style="@style/FilledButton"
        android:text="@string/loginActivity_Btn_login"

        app:layout_constraintTop_toBottomOf="@id/loginActivity_textInput_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>